--- a/style.css
+++ b/style.css
@@ -59,6 +59,83 @@ input, button, textarea, select {
     font: inherit;
 }
 
+/* ANIMACIONES */
+@keyframes  slideRight {
+    0%{
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes  slideLeft {
+    0%{
+        transform: translateX(100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+
+@keyframes  slideTop {
+    0%{
+        transform: translateY(100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+@keyframes  slideBottom {
+    0%{
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes  slideSci {
+    0%{
+        transform: translateX(100px) rotate(45deg);
+        opacity: 0;
+    }
+    100%{
+        transform: translateX(0) rotate(45deg);
+        opacity: 1;
+    }
+}
+
+@keyframes zoomOut{
+    0% {
+        transform: scale(1.1);
+        opacity: 0;
+    }
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes rhombus2{
+    0% {
+        right: -40%;
+        opacity: 0;
+    }
+    100%{
+        right: -25%;
+        opacity: 1;
+    }
+}
+
 /* Estilos generales del header */
 .header {
     position: relative;
@@ -69,11 +146,15 @@ input, button, textarea, select {
     justify-content: space-between;
     padding: 20px;
     height: 10vh; /* Elimina la altura fija */
-    transition: all 0.5s ease;
 }
 
+.logo{
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
+}
 .logo img {
     width: 80px;
+
 }
 
 .navbar {
@@ -82,10 +163,16 @@ input, button, textarea, select {
 }
 
 .navbar a {
-    font-size: 1.3rem;
+    display: inline-block;
+    font-size: 20px;
+    color: #000000;
+    text-decoration: none;
     font-weight: 500;
-    margin: 0px 30px;
-    transition: all 0.5s ease;
+    margin: 0 20px;
+    transition: 0.3s;
+    opacity: 0;
+    animation: slideTop 0.5s ease forwards;
+    animation-delay: calc(0.2s * var(--i));
 }
 
 .main {
@@ -98,7 +185,9 @@ input, button, textarea, select {
     margin-left: 10px;
     font-size: 1.3rem;
     font-weight: 500;
-    transition: all 0.5s ease;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: 1.1s;
 }
 
 .main a:hover {
@@ -174,11 +263,17 @@ input, button, textarea, select {
 
 .text-content h2 {
     font-size: 2rem;
+    opacity: 0;
+    animation: slideBottom 1s ease forwards;
+    animation-delay: 1s;
 }
 
 .text-content p {
     font-size: 1.125rem;
     color: #6b7280; /* Color del texto */
+    opacity: 0;
+    animation: slideBottom 1s ease forwards;
+    animation-delay: 1.2s;
 }
 
 /* Estilo para la imagen */
@@ -194,6 +289,9 @@ input, button, textarea, select {
     position: absolute; /* Permite usar coordenadas */
     bottom: 0; /* La imagen toca el borde inferior */
     right:  0;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 1.1s;
 
 }
 
@@ -335,6 +433,23 @@ input, button, textarea, select {
     font-size: 1rem;
     font-weight: 400;
     color: #4b5563;
+}
+.card-button-home{
+    display: inline-flex;
+    align-items: center;
+    padding: 0.5rem 0.75rem;
+    font-size: 0.875rem;
+    font-weight: 500;
+    text-align: center;
+    color: #fff;
+    background-color: rgb(44, 199, 77);
+    border-radius: 0.375rem;
+    opacity: 0;
+    animation: slideBottom 1s ease forwards;
+    animation-delay: 1.3s;
+    
+    
+
 }
 
 .card-button {
