--- a/Login.css
+++ b/Login.css
@@ -8,22 +8,35 @@ body {
     height: 100vh;
     margin: 0;
     position: relative;
+
 }
+.background-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2); /* Ajusta el valor de opacidad según sea necesario */
+    z-index: 1;
+}
+
 
 .back-button {
     position: absolute;
     top: 20px;
     left: 20px;
-    background: #4a4a4a;
+    background: #601270;
     color: white;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
     transition: background 0.3s ease;
+    z-index: 2;
 }
 
 .back-button:hover {
     background: #333;
+    z-index: 2;
 }
 
 .login-container {
@@ -33,6 +46,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 300px;
+    z-index: 2;
 }
 
 .login-container h1 {
@@ -52,7 +66,7 @@ body {
     width: 100%;
     padding: 0.75rem;
     margin-top: 1rem;
-    background: #4a4a4a;
+    background: #601270;
     border: none;
     border-radius: 5px;
     color: white;
