--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ input, button, textarea, select {
         top: 100%;
         right: -100%;
         width: 270px;
-        background-color: greenyellow;
+        background-color: #601270;
         flex-direction: column;
         border-radius: 10px;
         transition: all 0.5s ease;
@@ -366,7 +366,7 @@ input, button, textarea, select {
     height: 400px;
     margin: 100px auto;
     overflow: hidden;
-    border: 1px solid #09ff00;
+    border: 1px solid #601270;
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -536,7 +536,7 @@ input, button, textarea, select {
     font-weight: 500;
     text-align: center;
     color: #fff;
-    background-color: rgb(44, 199, 77);
+    background-color: #601270;
     border-radius: 0.375rem;
     opacity: 0;
     animation: slideBottom 1s ease forwards;
@@ -551,7 +551,7 @@ input, button, textarea, select {
     font-weight: 500;
     text-align: center;
     color: #fff;
-    background-color: greenyellow;
+    background-color: #601270;
     border-radius: 0.375rem;
     transition: background-color 0.3s ease;
     text-decoration: none;
@@ -689,7 +689,7 @@ input, button, textarea, select {
 .counter {
     font-size: 2.5rem;
     font-weight: bold;
-    color: greenyellow;
+    color: #601270;
 }
 
 /* Responsivo para pantallas medianas (tablets) */
