--- a/Login.css
+++ b/Login.css
@@ -3,23 +3,21 @@ body {
     background: url('img/fondoropa.jpg') no-repeat center center fixed;
     background-size: cover;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center;     /* Centra verticalmente */
     height: 100vh;
     margin: 0;
     position: relative;
-
 }
+
 .background-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.2); /* Ajusta el valor de opacidad según sea necesario */
-    z-index: 1;
+    background: rgba(0, 0, 0, 0.2);
 }
-
 
 .back-button {
     position: absolute;
@@ -31,30 +29,43 @@ body {
     text-decoration: none;
     border-radius: 5px;
     transition: background 0.3s ease;
-    z-index: 2;
 }
 
 .back-button:hover {
     background: #333;
-    z-index: 2;
 }
 
-.login-container {
+.login-register-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;  /* Asegura que ocupe todo el ancho de la pantalla */
+    height: 100%; /* Asegura que ocupe todo el alto de la pantalla */
+}
+
+.login-form, .register-form {
     background: rgba(255, 255, 255, 0.9);
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 300px;
-    z-index: 2;
+    position: absolute;
+    transition: opacity 0.5s ease-in-out;
 }
 
-.login-container h1 {
+.register-form {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.login-form h1, .register-form h1 {
     margin-bottom: 1.5rem;
     color: #4a4a4a;
 }
 
-.login-container input {
+.login-form input, .register-form input {
     width: 100%;
     padding: 0.75rem;
     margin: 0.5rem 0;
@@ -62,7 +73,7 @@ body {
     border-radius: 5px;
 }
 
-.login-container button {
+.login-form button, .register-form button {
     width: 100%;
     padding: 0.75rem;
     margin-top: 1rem;
@@ -74,11 +85,11 @@ body {
     cursor: pointer;
 }
 
-.login-container button:hover {
+.login-form button:hover, .register-form button:hover {
     background: #333;
 }
 
-.login-container img {
+.login-form img {
     width: 100px;
     margin-bottom: 1rem;
 }
