--- a/retiro.css
+++ b/retiro.css
@@ -76,8 +76,7 @@ h2 {
 
 .saludo {
     color: white; 
-    font-size: 24px;
-    margin-bottom: 10px; 
+    font-size: 24px;    
     position: absolute;
     top: 25%; 
     left: 50%; 
@@ -100,4 +99,105 @@ input[type="range"]::-webkit-slider-thumb {
 input[type="range"]::-webkit-slider-thumb:active{
     transform: scale(1.2);
     background-color: #c99fc3; 
+}
+
+@media (max-width: 1000px) {
+    .header {
+        padding: 14px 2%;
+        transition: 0.2s;
+    }
+
+    .navbar a {
+        margin: 0px 20px;
+    }
+
+    #menu-icon {
+        display: block;
+    }
+
+    .navbar {
+        position: absolute;
+        top: 100%;
+        right: -100%;
+        width: 270px;
+        background-color: #601270;
+        flex-direction: column;
+        border-radius: 10px;
+        transition: all 0.5s ease;
+    }
+
+    .navbar a {
+        margin: 12px 0;
+        padding: 0 25px;
+    }
+
+    .navbar a:hover {
+        color: royalblue;
+        border-color:royalblue ;
+        transform: translateY(5px);
+    }
+
+    .navbar.open {
+        right: 2%;
+    }
+}
+
+/* Media queries para pantallas más pequeñas */
+@media (max-width: 768px) {
+    .text-content {
+        top: 50%; /* Ajusta la posición del texto */
+        left: 3%;
+        width: 50%; /* Expande el ancho del texto */
+    }
+
+    .text-content h2 {
+        font-size: 1.5rem; /* Disminuye el tamaño del título */
+    }
+
+    .text-content p {
+        font-size: 1rem; /* Disminuye el tamaño del párrafo */
+    }
+
+    .img-content {
+        width: 100%; /* La imagen ocupa todo el ancho */
+    }
+
+    .img-content img {
+        width: 50%; /* Ajusta el tamaño de la imagen */
+    }
+}
+
+/* Media queries para pantallas muy pequeñas */
+@media (max-width: 480px) {
+    .text-content {
+        top: 40%; /* Posición más centrada para pantallas pequeñas */
+        left: 2%;
+        width: 50%; /* Ancho más amplio del texto */
+    }
+
+    .text-content h2 {
+        font-size: 1.25rem; /* Disminuye el tamaño del título */
+    }
+
+    .text-content p {
+        font-size: 0.875rem; /* Ajusta el tamaño del párrafo */
+    }
+
+    .img-content img {
+        width: 60%; /* Ajusta el tamaño de la imagen para pantallas pequeñas */
+    }
+
+    .saludo {
+        top: 15%;
+    }
+
+    .container {
+        max-width: 300px;
+    }
+
+    .container h2, button{
+        text-align: center;
+        align-items: center;
+    }
+    
 }
