--- a/style.css
+++ b/style.css
@@ -7,18 +7,42 @@
     padding: 0;
 }
 
+:root {
+    --color-primario: #5F288F;
+    --color-secundario: #63C639;
+    --color-complementario: #88D317;
+    --color-neutro-oscuro: #333333;
+    --color-neutro-claro: #F5F5F5;
+}
+
+
+
 /* Tipografía */
 body {
-    font-family: 'Nunito', sans-serif;
+    font-family: "Radio Canada", sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #333;
-    background-color: #fff;
+    background-color: var(--color-neutro-claro);
     margin: 0;
 }
 
+.morado{
+    color: var(--color-primario);
+}
+.verde{
+    color: var(--color-secundario);
+}
+
+.separador{
+    border: 3px solid var(--color-secundario);
+    width: 100px;
+    margin: 10px auto;
+    
+}
+
 .background-container {
-    background-image: url('img/ModularTex.png');
+    background-image: url('img/ModularTex-fondo-morad.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -153,7 +177,7 @@ input, button, textarea, select {
     animation: slideRight 1s ease forwards;
 }
 .logo img {
-    width: 80px;
+    width: 250px;
 
 }
 .header h1{
@@ -180,8 +204,8 @@ input, button, textarea, select {
 
 
 .navbar a:hover{
-    color: royalblue;
-    border-color:royalblue ;
+    color: var(--color-secundario);
+    border-color:var(--color-secundario) ;
 
 }
 
@@ -199,11 +223,13 @@ input, button, textarea, select {
     opacity: 0;
     animation: slideLeft 1s ease forwards;
     animation-delay: 1.1s;
+    color: var(--color-neutro-claro);
+
 }
 
 .main a:hover {
-    color: royalblue;
-    border-color:royalblue ;
+    color: var(--color-secundario);
+    border-color:var(--color-secundario) ;
 }
 
 #menu-icon {
@@ -233,7 +259,7 @@ input, button, textarea, select {
         top: 100%;
         right: -100%;
         width: 270px;
-        background-color: #601270;
+        background-color: var(--color-primario);
         flex-direction: column;
         border-radius: 10px;
         transition: all 0.5s ease;
@@ -245,8 +271,8 @@ input, button, textarea, select {
     }
 
     .navbar a:hover {
-        color: royalblue;
-        border-color:royalblue ;
+        color: var(--color-secundario);
+        border-color:var(--color-secundario);
         transform: translateY(5px);
     }
 
@@ -271,10 +297,10 @@ input, button, textarea, select {
     top: 40%;
     left: 5%;
     width: 40%;
-    color: #1f2937;
+    color: var(--color-neutro-claro);
 }
 
-.text-content h2 {
+.text-content h1 {
     font-size: 2rem;
     opacity: 0;
     animation: slideBottom 1s ease forwards;
@@ -283,7 +309,7 @@ input, button, textarea, select {
 
 .text-content p {
     font-size: 1.125rem;
-    color: #6b7280;
+    color: var(--color-neutro-claro);
     opacity: 0;
     animation: slideBottom 1s ease forwards;
     animation-delay: 1.2s;
@@ -298,7 +324,7 @@ input, button, textarea, select {
 }
 
 .img-content img {
-    width: 60%;
+    width: 70%;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -366,12 +392,13 @@ input, button, textarea, select {
     height: 400px;
     margin: 100px auto;
     overflow: hidden;
-    border: 1px solid #601270;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+}
+
   
   .contenedor__slide {
     display: flex;
@@ -395,7 +422,7 @@ input, button, textarea, select {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    background-color: RED;
+
   }
   
   .contenedor__texto {
@@ -427,7 +454,7 @@ input, button, textarea, select {
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: #ccc;
+    background-color: var(--color-primario);
     cursor: pointer;
   }
   
@@ -501,16 +528,34 @@ input, button, textarea, select {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%; /* Asegura que las tarjetas ocupen todo el ancho en pantallas pequeñas */
     margin: 10px;
+    height: 550px;
 }
 
 .card-img {
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
-    width: 100%;
+    width: 50%;
+    padding-top: 20px;
+    margin: 0 auto;
 }
+
+.card-img-mision{
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    width: 50%;
+    height: 220px;
+    padding-top: 20px;
+    margin: 0 auto;
+}
+.mision-vision-contenedor{
+    width: 100%;
+    height: 500px;
+}
+
 
 .card-content {
     padding: 1.25rem;
+    text-align: center;
 }
 
 .card-title {
@@ -536,7 +581,7 @@ input, button, textarea, select {
     font-weight: 500;
     text-align: center;
     color: #fff;
-    background-color: #601270;
+    background-color: var(--color-complementario);
     border-radius: 0.375rem;
     opacity: 0;
     animation: slideBottom 1s ease forwards;
@@ -551,19 +596,18 @@ input, button, textarea, select {
     font-weight: 500;
     text-align: center;
     color: #fff;
-    background-color: #601270;
+    background-color: var(--color-complementario);
     border-radius: 0.375rem;
     transition: background-color 0.3s ease;
     text-decoration: none;
 }
 
 .card-button:hover {
-    background-color: rgb(0, 255, 213);
+    background-color: var(--color-primario);
 }
 
 .card-button:focus {
     outline: none;
-    box-shadow: 0 0 0 0.25rem rgba(59, 130, 246, 0.5);
 }
 
 .arrow-icon {
@@ -645,13 +689,13 @@ input, button, textarea, select {
     border-radius: 15px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     max-width: 900px;
-    margin: 40px auto;
+    margin: 100px auto;
     text-align: center;
+
 }
 
 /* Título de la sección */
 .section-title {
-    margin-top: 200px;
     font-size: 2.5rem;
     margin-bottom: 30px;
     color: #333;
@@ -766,12 +810,12 @@ input, button, textarea, select {
 }
 
 .pagina-proposito-texto h4 {
-    font-size: 1.75rem; /* Ajusta el tamaño del título */
+    font-size: 60px; /* Ajusta el tamaño del título */
     color: #1f2937; /* Color del título */
 }
 
 .pagina-proposito-texto p {
-    font-size: 1.125rem; /* Tamaño de la fuente del párrafo */
+    font-size: 20px; /* Tamaño de la fuente del párrafo */
     font-weight: 400;
     color: #6b7280; /* Color del texto */
     margin-top: 20px; /* Espacio entre el título y el texto */
@@ -1113,7 +1157,7 @@ input, button, textarea, select {
     padding-top: 50px;
 }
 .form-container {
-    background-color: #6e3667;
+    background-color: var(--color-primario);
     color: #f0f8ff;
     border: 2px solid #6e3667;
     padding: 20px;
@@ -1124,8 +1168,7 @@ input, button, textarea, select {
 }
 
 .form-check-input:checked {
-    background-color: #88D317;
-    border-color: #88D317;    
+    background-color: var(--color-secundario);
 }
 
 .btn{ 
