--- a/retiro.css
+++ b/retiro.css
@@ -25,6 +25,10 @@ form label{
     font-family: 'Canada', sans-serif;
 }
 
+.input-group .form-control {
+    max-width: 70px; /* Ajusta el ancho del input manual */
+}
+
 .logo {
     max-height: 100px;
     margin-left: auto; /* Asegura que el logo se alinee a la derecha */
